--- a/style.css
+++ b/style.css
@@ -21,3 +21,40 @@ h1{
 img{
     width: 900px;
 }
+
+section{
+    padding: 15px;
+    background-color: lightgray;
+}
+
+.heading{
+    text-align: center;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+ul{
+    width: 600px;
+    margin: auto;
+    padding: 30px;
+}
+
+li{
+    padding: 12px;
+}
+
+.quote-p{
+    width: 600px;
+    margin: auto;
+}
+
+.head1{
+    font-style: italic;
+    font-size: 18px;
+}
+
+h3{
+    width: 800px;
+    margin: auto;
+    padding: 30px 0;
+}
